--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 body{
     display: flex;
-    width: 100%;
+    width: auto;
     justify-content: center;
     background-color: rgb(0, 0, 27);
+}
+
+#container{
+    display: flex;
+    justify-content: center;
+
 }
